[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A set of 5 games for your brain."
authors = ["Kirill Zhelvakov <blzneci.89@gmail.com>"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]
repository = "https://github.com/blizneci/python-project-lvl1"
classifiers = [
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-progression = "brain_games.scripts.brain_progression:main"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
